# trabalho-sos

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/order-gen/: gene.cpp  gene.hpp  parallel.cpp  sequential.cpp
